2008-06-25 Samuel Abels <http://debain.org>

	* lib/Exscript/stdlib/IPv4/util.py: Fix mask2pfxlen to work with
	the 255.255.255.255 mask.
	* exscript, src/Exscript/Exscript.py: Fix: Now works with Python 2.2 again.

2008-06-23 Samuel Abels <http://debain.org>

	* all-over: Add mask2pfxlen function to the stdlib.

2008-06-22 Samuel Abels <http://debain.org>

	* all-over: Major redesign and cleanups, move some libraries out of the 
	package.

2008-04-21 Samuel Abels <http://debain.org>

	* lib/Exscript/TerminalConnection/SSH.py: Improved SSH such that it works
	even if the DISPLAY variable is set.

2008-04-18 Samuel Abels <http://debain.org>

	* exscript.py, lib/Exscript/TerminalConnection/*.py: Add support for using
	the SSH -i switch.

2008-04-15 Samuel Abels <http://debain.org>

	* lib/Exscript/*.py: Add support for "from ... to ..." loops.

2008-03-26 Samuel Abels <http://debain.org>

	* lib/Exscript/stdlib/IPv4/util.py: No longer throw a warning in Python >=
	2.3.

2008-03-19 Samuel Abels <http://debain.org>

	* lib/Exscript/stdlib/*: Added the List and IPv4 namespaces, with several 
	new functions.

2008-03-19 Samuel Abels <http://debain.org>

	* lib/Exscript/stdlib/*: Added the List and IPv4 namespaces, with several 
	new functions.

2008-01-31 Samuel Abels <http://debain.org>

	* lib/Exscript/*: Remove dead code.

2008-01-22 Samuel Abels <http://debain.org>

	* lib/Exscript/Fail.py: Fix: Inverted logic.
	* lib/Exscript/Execute.py, lib/Exscript/Extract.py, lib/Exscript/Parser.py,
	exscript.py: Changed behavior of --no-prompt such that all prompts are now
	ignored, not only the login prompt. Added --no-initial-prompt that mimics
	the original behavior of --no-prompt.
	* lib/Exscript/TerminalConnection/Telnet.py: Improved error message in debug
	mode.

2008-01-09 Samuel Abels <http://debain.org>

	* lib/Exscript/Fail.py: New built-in keyword "fail".

2008-01-02 Samuel Abels <http://debain.org>
