@@ -1,6 +1,11 @@
 2008-06-25 Samuel Abels <http://debain.org>
 
-	* lib/Exscript/stdlib/IPv4/util.py: Fix mask2pfxlen to work with
+	* exscript, src/Exscript/Exscript.py: Fix: Passed in variable names were 
+	not correctly defined.
+
+2008-06-24 Samuel Abels <http://debain.org>
+
+	* src/Exscript/Interpreter/stdlib/IPv4/util.py: Fix mask2pfxlen to work with
 	the 255.255.255.255 mask.
 	* exscript, src/Exscript/Exscript.py: Fix: Now works with Python 2.2 again.
 
